--- a/treact.html
+++ b/treact.html
@@ -20,7 +20,7 @@
                 <!--  -->Nav Logo here<!--  -->
                 </div>
                 <!--  -->Enter Nav Links here<!--  -->
-                <button class="btn__menu" onclick="openMenu()">
+                <button class="btn__menu" type="button" onclick="openMenu()"></button>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                         class="btn__menu--svg">
@@ -107,11 +107,12 @@
             </div>
         </section>
     </main>
+</body>
     <footer>
         <div class="row footer__row">
             <!--  -->Enter Footer<!--  -->
         </div>
     </footer>
-</body>
+
 
 </html>
