--- a/treact.html
+++ b/treact.html
@@ -28,6 +28,7 @@
                     </button>
                 </div>
             </nav>
+        </body>>
             <div class="modal">
                 <button class="but__menu btn__menu--close" aria-label="text" type="submit" onclick="closeMenu()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -55,6 +56,7 @@
                 </div>
             </header>
         </section>
+        <body>
         <main>
             <section id="features">
                 <div class="container">
@@ -113,11 +115,10 @@
                 </div>
             </section>
         </main>
+        </body>
         <footer>
             <div class="row" footer__row>
                 <!-- Enter Footer -->
             </div>
         </footer>
-    </body>
-
 </html>
