--- a/treact.html
+++ b/treact.html
@@ -1,124 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="treact.css">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10/css/all.css">
-        <title>Treact</title>
-    </head>
-
-    <body>
-        <section id="landing">
-            <nav>
-                <div class="row nav__row"></div>
-                <div class="nav__logo">
-                    <!-- Nav Logo -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="script.js"></script>
+</head>
+<body>
+    <section id="landing">
+        <nav>
+            <div class="row nav-row">
+                <div class="nav-logo">
+                    <img src="assets/assets - Google Drive_files/assetsproj2/assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="logo">
                 </div>
-                <!-- Nav Links-->
-                <div><button class="btn__menu" type="submit" aria-label="text" text-content onclick="openMenu">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="btn__menu--svg">
-                            <line x1="3" y1="12" x2="21" y2="12"></line>
-                            <line x1="3" y1="6" x2="21" y2="6"></line>
-                            <line x1="3" y1="18" x2="21" y2="18"></line>
-                        </svg>
-                    </button>
-                </div>
-            </nav>
-        </body>>
-            <div class="modal">
-                <button class="but__menu btn__menu--close" aria-label="text" type="submit" onclick="closeMenu()">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="light__styledcloseicon-lj69nl-14 fasujc">
-                        <line x1="18" y1="6" x2="6" y2="18"></line>
-                        <line x1="6" y1="6" x2="18" y2="18"></line>
-                    </svg>
-                </button>
-                <div class="modal__links">
-                    <a class="modal__link">About</a>
-                    <a class="modal__link">Blog</a>
-                    <a class="modal__link">Pricing</a>
-                    <a class="modal__link">Contact Us</a>
-                    <a class="modal__link">Login</a>
-                    <a class="modal__link modal__link--primary">Sign Up</a>
-
+                <!--Enter Nav Links Here-->
+                <ul class="nav-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                    </ul>
+            <button class="btn-menu" type="button" aria-label="menu button" onclick="openMenu()"></button>
+                    <svg xmlns="http:/www.w3.org/2000/svg"
+width="24" height="24" viewBox="0 0 24 24" fill="none" 
+stroke="currentColor" stroke-width="2" stroke-linecap="round" 
+stroke-linejoin="round" class="light__StyledCloseIcon-lj69nl-14fASujC">
+<line x1="18" y1="6" x2="6" y2="18"></line>
+<line x1="6" y1="16" x2="18" y2="18"></line>
+</svg>
+</div>
+</nav>
+<div class="modal">
+            <button class="btn__menu btn__menu--close" type="button" aria-label="button" onclick="closeMenu()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="light__styled-close-icon-lj69nl-14 fASujC">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+            </button>
+            <div class="modal__links">
+                <a class="modal__link">About</a>
+                <a class="modal__link">Blog</a>
+                <a class="modal__link">Pricing</a>
+                <a class="modal__link">Contact Us</a>
+                <a class="modal__link">Login</a>
+                <a class="modal__link modal__link--primary">Sign Up</a>
+            </div>
+        </div>
+        <header>
+            <div class="container">
+                <div class="row">
+                    <!--  -->Enter Header / About Us Section<!--  -->
+            </div>
+        </div>
+        </header>
+    </section>
+    <main>
+        <section id="features">
+            <div class="container">
+                <div class="row__narrow">
+                    <!--  -->Enter Features Section<!--  -->
                 </div>
             </div>
-            <header>
-                <div class="container">
-                    <div class="row">
-                        <!-- Enter Header / About Us Section -->
-                    </div>
-                </div>
-            </header>
         </section>
-        <body>
-        <main>
-            <section id="features">
-                <div class="container">
-                    <div class="row__narrow">
-                        <!--Enter Features Section-->
-
-                    </div>
+        <section id="quality">
+            <div class="container">
+                <div class="row">
+                    <!--  -->Enter Quality Work Section<!--  -->
                 </div>
-            </section>
-            <section id="quality">
-                <div class="container">
-                    <div class="row">
-                        <!-- Quality of Work Section -->
-                    </div>
-                </div>
-            </section>
-            <section id="steps">
-                <div class="steps">
-                    <div class="container">
-                        <div class="row">
-                            <!-- Steps Section -->
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="values">
-                <div class="values">
-                    <div class="container">
-                        <div class="row">
-                            <!-- Enter Values Section -->
-
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section id="pricing">
-                <div class="container">
-                    <div class="row">
-                        <!-- Enter Pricing -->
-                    </div>
-                </div>
-            </section>
-            <section id="testimonials">
-                <div class="container">
-                    <div class="row">
-                        <!-- Testimonals -->
-                    </div>
-                </div>
-            </section>
-            <section id="start">
-                <div class="container">
-                    <div class="row">
-                        <!-- Start (Call to Action) -->
-                    </div>
-                </div>
-            </section>
-        </main>
-        </body>
-        <footer>
-            <div class="row" footer__row>
-                <!-- Enter Footer -->
             </div>
-        </footer>
+        </section>
+        <section id="steps">
+            <div class="container">
+                <div class="row">
+                    <!--  -->Enter Steps Section<!--  -->
+                </div>
+            </div>
+        </section>
+        <section id="values">
+            <div class="container">
+                <div class="row">
+                    <!--  -->Enter Values Section<!--  -->
+                </div>
+            </div>
+        </section>
+        <section id="pricing">
+            <div class="container">
+                <div class="row">
+                    <!--  -->Enter Pricing Section<!--  -->
+                </div>
+            </div>
+        </section>
+        <section id="testimonials">
+            <div class="container">
+                <div class="row">
+                    <!--  -->Enter Testimonials Section<!--  -->
+                </div>
+            </div>
+        </section>
+        <section id="start">
+            <div class="container">
+                <div class="row">
+                    <!--  -->Enter "Start"/Call to action section<!--  -->
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="row footer__row">
+            <!--  -->Enter Footer<!--  -->
+        </div>
+    </footer>
+
+</body>
 </html>
