--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="feature__row">
                   <figure class="feature__img--wrapper">
                     <img
-                      src="/assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg"
+                      src="assets/assets - Google Drive_files/assetsproj2/assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg"
                       class="feature__img"
                     alt="feature">
                   </figure>
@@ -287,7 +287,7 @@
                   />
                 </defs>
 
-                <!-- Repeat the line 10 times with vertical spacing -->
+                <!-- Repeat the line 10 times with vertical spacing
                 <g fill="rgba(100, 21, 255, 0.15)">
                   <use href="#line-of-balls" transform="translate(0, 0)" />
                   <use href="#line-of-balls" transform="translate(0, 100)" />
@@ -299,7 +299,7 @@
                   <use href="#line-of-balls" transform="translate(0, 700)" />
                   <use href="#line-of-balls" transform="translate(0, 800)" />
                   <use href="#line-of-balls" transform="translate(0, 900)" />
-                </g>
+                </g>-->
               </svg>
             </figure>
             <div class="steps__description">
