--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="light___StyledCloseIcon-lj69nl-14 fASujC"
+            class="btn__menu--svg"
           >
             <line x1="18" y1="6" x2="6" y2="18"></line>
             <line x1="6" y1="6" x2="18" y2="18"></line>
@@ -423,14 +423,14 @@
           </div>
             <div class="plans">
               <div class="plan">
-                <div container="plan__top">
+                <div class="plan__top">
                   <!--Personal plan-->
                   <div class="plan__name">PERSONAL</div>
                   <div><br></div>
                   <div class="plan__price">$17.99</div>
                   <div class="plan__duration">MONTHLY</div>
                 </div>
-                <div container="plan__top">
+                <div class="plan__top">
                   <div class="plan__target">For Individuals</div>
                   <p class="plan__feature">30 Templates</p>
                   <p class="plan__feature">7 Landing Pages</p>
@@ -441,16 +441,16 @@
                   <button class="plan__button" type="button" aria-label="button">buy now</button>
                 </div>
               </div>
-              <div container="plan__middle">
-              <div class="plans__middle">
-                </div>
-                <!--Business plan-->
-      <div class="plan__name">Business</div>
+              <!--Business plan-->
+              <div class="plans">
+                <div class="plan"></div>
+                <div class="plan__middle">
+                  <div class="plan__name">BUSINESS</div>
                   <div><br></div>
                   <div class="plan__price">$37.99</div>
                   <div class="plan__duration">MONTHLY</div>
                 </div>
-                <div container="plan__top">
+                <div class="plan__top">
                   <div class="plan__target">For Small Businesses</div>
                   <p class="plan__feature">30 Templates</p>
                   <p class="plan__feature">15 Landing Pages</p>
@@ -461,30 +461,6 @@
                   <button class="plan__button" type="button" aria-label="button">buy now</button>
                 </div>
               </div>
-              <div container="plan__middle">
-              <div class="plans__middle">
-
-
-               <!-- <div class="plan">
-               <div class="plan__middle">
-                  <div class="plan__name">BUSINESS</div>
-                  <div class="plan__price">$37.99</div>
-                  <div class="plan__duration">MONTHLY</div>
-                  <div class="plan__target">For Small Businesses<br><br></div>
-                  <div class="plan__bottom"></div>
-                  <p class="plan__feature">22 Internal Pages<br></p>
-                  <p class="plan__feature">60 Templates<br></p>
-                  <p class="plan__feature">15 Landing Pages<br></p>
-                  <p class="plan__feature">Priority Assistance</p>
-                </div>
-                <div></div>
-                <div class="plan__bottom">
-                  <button class="plan__button" type="button" aria-label="button">buy now</button>
-                <div class="plan__bottom">
-                </div>
-              </div>
-            </div>
-            <div><br><br><br></div> -->
               <div class="plan">
                 <div class="plan__top">
                   <div class="plan__name">ENTERPRISE</div>
@@ -510,7 +486,6 @@
                 class="plans__blob">
               </svg>
             </div>
-          </div>
       </section>
       <section id="testimonials">
         <div class="container">
