--- a/index.html
+++ b/index.html
@@ -406,8 +406,9 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
-            <div><br><br></div>
+            <div></div>
             </div>
+            <div><br><br></div><br>
           </div>
             <div class="plans">
               <div class="plan">
@@ -428,13 +429,13 @@
                 <div class="plan__bottom">
                   <button class="plan__button" type="button" aria-label="button">buy now</button>
                 </div>
+              <div><br><br></div>
               </div>
               <!--Business plan-->
               <div class="plans">
                 <div class="plan"></div>
                 <div class="plan__middle">
                   <div class="plan__name">BUSINESS</div>
-                  <div><br></div>
                   <div class="plan__price">$37.99</div>
                   <div class="plan__duration">MONTHLY</div>
                 </div>
@@ -448,7 +449,9 @@
                 <div class="plan__bottom">
                   <button class="plan__button" type="button" aria-label="button">buy now</button>
                 </div>
+                <div><br><br></div></div>
               </div>
+              <!-- Enterprise -->
               <div class="plan">
                 <div class="plan__top">
                   <div class="plan__name">ENTERPRISE</div>
@@ -466,14 +469,6 @@
                   <button class="plan__button" type="button" aria-label="button">buy now</button>
                 </div>
               </div>
-              <svg
-                width="600"
-                height="600"
-                viewBox="0 0 600 600"
-                xmlns="http://www.w3.org/2000/svg"
-                class="plans__blob">
-              </svg>
-            </div>
       </section>
       <section id="testimonials">
         <div class="container">
