--- a/index.html
+++ b/index.html
@@ -412,7 +412,8 @@
           </div>
             <div class="plans">
               <div class="plan">
-                <div class="plan__top">
+                <div class="card plan__top">
+                  <div class="card body">
                   <!--Personal plan-->
                   <div class="plan__name">PERSONAL</div>
                   <div><br></div>
@@ -430,16 +431,20 @@
                   <button class="plan__button" type="button" aria-label="button">buy now</button>
                 </div>
               <div><br><br></div>
+              <div><br><br></div>
+              <div><br><br></div>
+              </div>
               </div>
               <!--Business plan-->
               <div class="plans">
                 <div class="plan"></div>
-                <div class="plan__middle">
+                <div class="card plan__middle">
+                  <div class="card body">
                   <div class="plan__name">BUSINESS</div>
                   <div class="plan__price">$37.99</div>
                   <div class="plan__duration">MONTHLY</div>
                 </div>
-                <div class="plan__top">
+                <div class="card plan__top">
                   <div class="plan__target">For Small Businesses</div>
                   <p class="plan__feature">30 Templates</p>
                   <p class="plan__feature">15 Landing Pages</p>
@@ -449,8 +454,10 @@
                 <div class="plan__bottom">
                   <button class="plan__button" type="button" aria-label="button">buy now</button>
                 </div>
+                </div>
                 <div><br><br></div></div>
-              </div>
+              <div><br><br></div></div>
+              <div><br><br></div>
               <!-- Enterprise -->
               <div class="plan">
                 <div class="plan__top">
